--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,4 @@
 <p>: 본 서비스는 "초보자를 위한 레일스 가이드라인"의 샘플 프로젝트입니다.</p>
 <br />
 <%= link_to "글작성", posts_path, class:'btn btn-default' %>
+<%= link_to "공지 작성", bulletins_path, class:'btn btn-default' %>
