--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,9 +15,9 @@
       <tr>
         <td><%= post.title %></td>
         <td>
-            <%= link_to 'Show', post, class: 'btn btn-default' %>
-            <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %>
-            <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %>
+          <%= link_to 'Show', (@bulletin.present? ? [post.bulletin, post] : post), class: 'btn btn-default' %>
+          <%= link_to 'Edit', (@bulletin.present? ? edit_bulletin_post_path(post.bulletin, post) : edit_post_path(post)), class: 'btn btn-default' %>
+          <%= link_to 'Destroy', (@bulletin.present? ? [post.bulletin, post] : post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %>
         </td>
       </tr>
     <% end %>
